# ditossauro

./: .coderabbit.yaml  .dockerignore  .eslintrc.json  .gitignore  .taurignore  AGENTS.md  ARCHITECTURE.md  CLIPBOARD_SOLUTION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  E2E_SETUP_SUMMARY.md  INSTALACAO.md  LICENSE  MICROPHONE_TROUBLESHOOTING.md  MUDANCAS_ASSEMBLYAI_SDK.md  MUDANCAS_WEB_AUDIO.md  NORTHFLANK.md  PRODUCT_REQUIREMENTS.md  PROJECT_STATUS.md  README-pt-BR.md  README.md  RELEASING.md  REQUIREMENTS.md  SETUP.md  SOLUCAO_PROBLEMAS.md  VOICE_COMMANDS_TESTING.md  WINDOWS_SETUP.md  floating_window.html  forge.config.ts  forge.env.d.ts  index.html  package-lock.json  package.json  plan.md  playwright.config.ts  test-markdown-stripping.js  test-mock-debug.js  test-voice-commands.js  (+9 more)
.claude/: settings.local.json
.github/: RELEASE_PROCESS.md  pull_request_template.md
backend/: __init__.py  main.py  requirements.txt
docs/: README.md  _sidebar.md  code-of-conduct.md  contributing.md  features.md  getting-started.md  index.html  voice-commands.md
electron/: main.ts  preload.ts
frontend/: index.html  package-lock.json  package.json
scripts/: build-cross-platform.js  build.bat  build.py  bump-version.js  dev-cross-platform.js  dev-simple.bat  dev.bat  dev.sh  diagnose.bat  publish-release.js  run-e2e-tests.js  test-native-modules.js
src/: assemblyai-client.ts  audio-manager.ts  audio-recorder.ts  code-interpreter-factory.ts  groq-client.ts  (+25 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+65 files in other folders)
