[package]
name = "openwispr"
version = "0.1.0"
description = "Open-source desktop app to transform voice into text (local)."
authors = ["OpenWispr Contributors"]
license = "MIT"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["dialog", "fs-all", "path-all", "global-shortcut"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
once_cell = "1.19"
enigo = "0.1"

# For sending signals on Unix to gracefully stop Python recorder
nix = { version = "0.27", features = ["signal"] }
which = "4"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
